# rope-benches

./: Cargo.toml  README.md
crdt-testdata/src/: lib.rs
data/: realworld.txt
rope_benches/: Cargo.toml
rope_benches/src/: main.rs  rope.rs
src/: gapbuffer.rs  jumprope.rs  main.rs  rope.rs
