[package]
authors = ["Joseph Gentle <me@josephg.com>"]
edition = "2018"
name = "rope_benches"
version = "0.1.0"


[dependencies]
criterion = "0.5"
jumprope = { path = ".." }
rand = { version = "0.8", features = ["small_rng"] }
ropey = "1.6.0"
xi-rope = "0.3.0"
crdt-testdata = { path = "../crdt-testdata" }
crop = { git = "https://github.com/noib3/crop" }
text-buffer = {path = "/Users/troyhinckley/rune/crates/text-buffer"}
