[package]
authors = ["Joseph Gentle <me@josephg.com>"]
edition = "2018"
name = "rope_benches"
version = "0.1.0"


[dependencies]
criterion = "0.5"
jumprope = { path = ".." }
rand = { version = "0.8", features = ["small_rng"] }
ropey = {path = "/Users/troyhinckley/repos/mod-ropey", features = ["simd"]}
xi-rope = "0.3.0"
crdt-testdata = { path = "../crdt-testdata" }
crop = { path = "/Users/troyhinckley/repos/crop" }
text-buffer = {path = "/Users/troyhinckley/rune/crates/text-buffer"}
regex = "1.9.5"
get-size = {git = "https://github.com/CeleritasCelery/get-size.git", branch = "boxed_slice_fix", features = ["derive"]}
