[package]
authors = ["Joseph Gentle <me@josephg.com>"]
edition = "2018"
name = "rope_benches"
version = "0.1.0"


[dependencies]
criterion = "0.5"
jumprope = { path = ".." }
ropey = {git = "https://github.com/CeleritasCelery/ropey.git", features = ["simd"]}
crdt-testdata = { path = "../crdt-testdata" }
crop = { git = "https://github.com/CeleritasCelery/crop.git" }
text-buffer = {git = "https://github.com/CeleritasCelery/rune.git", package = "text-buffer"}
regex = "1.9.5"
get-size = {git = "https://github.com/CeleritasCelery/get-size.git", branch = "boxed_slice_fix", features = ["derive"]}
